manifests/iand/static-websites.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-websites
  namespace: iand
  labels:
    app: static-websites
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-websites
  template:
    metadata:
      labels:
        app: static-websites
    spec:
      nodeSelector:  # remove when no longer dependent on /var/www
        kubernetes.io/hostname: beagle2
      containers:
      - name: static-websites
        image: nginx
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: content
          mountPath: /var/www
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
          readOnly: true
      volumes:
      - name: content
        hostPath:
          path: /var/www
      - name: nginx-config
        configMap:
          name: static-websites-nginx-config

---

apiVersion: v1
kind: Service
metadata:
  name: static-websites
  namespace: iand
  labels:
    app: static-websites
spec:
  selector:
    app: static-websites
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: static-websites
  namespace: iand
  labels:
    app: static-websites
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: iandavis.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: www.iandavis.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: blog.iandavis.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: amberfell.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: www.amberfell.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: genealogy.iandavis.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: scratch.iandavis.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: dataincubator.org
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: www.dataincubator.org
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: patterns.dataincubator.org
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: vocab.org
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: www.vocab.org
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: open.vocab.org
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: open.vocab.org
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: innovateer.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: www.innovateer.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: internetalchemy.org
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: freyadavis.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: www.freyadavis.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: woollysheep.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: www.woollysheep.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: oldstick.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: www.oldstick.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  tls:
  - hosts:
    - iandavis.com
    - www.iandavis.com
    - blog.iandavis.com
    - genealogy.iandavis.com
    - scratch.iandavis.com
    secretName: tls-cert-iandavis
  - hosts:
    - amberfell.com
    - www.amberfell.com
    secretName: tls-cert-amberfell
  - hosts:
    - vocab.org
    - www.vocab.org
    - open.vocab.org
    secretName: tls-cert-vocab
  - hosts:
    - dataincubator.org
    - www.dataincubator.org
    - patterns.dataincubator.org
    secretName: tls-cert-dataincubator
